# FIFA-World-Cup-Match-Predictor

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: metadata.joblib  xgb_score_model.joblib
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: styles.css
frontend/src/components/: BracketSelector.jsx  ChampionCard.jsx  Footer.jsx  Hero.jsx  LoadingCard.jsx  MatchCard.jsx  Navbar.jsx  PredictionDetails.jsx  StatBar.jsx  WorldCupLogo.jsx
frontend/src/data/: bracket.js
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js
frontend/src/utils/: prediction.js
src/worldcup_predictor/: cli.py  config.py  data.py  features.py  model.py  poisson.py
src/worldcup_predictor/api/: __init__.py  main.py  routes.py  schemas.py
src/worldcup_predictor/artifacts/: metadata.joblib  xgb_model.joblib  xgb_score_model.joblib
src/worldcup_predictor/services/: __init__.py  prediction.py
tests/: test_api.py  test_cli.py  test_features.py  test_model.py  test_poisson.py  test_prediction_service.py
