[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "FastAPI World Cup match outcome predictor using Elo features and XGBoost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "pydantic>=2.11",
  "python-dotenv>=1.1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28",
  "pytest>=7.4",
]

[project.scripts]
worldcup-train-model = "worldcup_predictor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
